--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Software Development ePortfolio</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+  <header class="hero">
+    <div class="overlay">
+      <h1>My Software Development ePortfolio</h1>
+      <p>Showcasing professional growth, technical artifacts, and reflection</p>
+      <a href="#projects" class="btn">Explore Portfolio</a>
+    </div>
+  </header>
 
+  <nav class="navbar">
+    <ul>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#narratives">Narratives</a></li>
+      <li><a href="#assessment">Self-Assessment</a></li>
+      <li><a href="#video">Code Review</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="projects" class="section">
+      <h2>Technical Artifacts</h2>
+      <div class="card-grid">
+        <div class="card">
+          <h3>Original Code</h3>
+          <p>Initial implementation files showcasing my early development approach.</p>
+          <a href="projects/original_code/" class="btn">View Code</a>
+        </div>
+        <div class="card">
+          <h3>Enhanced Code</h3>
+          <p>Refined project with improved functionality and structure.</p>
+          <a href="projects/enhanced_code/" class="btn">View Code</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="narratives" class="section">
+      <h2>Milestone Narratives</h2>
+      <ul class="doc-links">
+        <li><a href="narratives/milestone1.docx">Milestone 1 Narrative</a></li>
+        <li><a href="narratives/milestone2.docx">Milestone 2 Narrative</a></li>
+        <li><a href="narratives/milestone3.docx">Milestone 3 Narrative</a></li>
+      </ul>
+    </section>
+
+    <section id="assessment" class="section">
+      <h2>Professional Self-Assessment</h2>
+      <p>A reflective overview of my learning and professional growth in software development.</p>
+      <a href="assessment/professional_self_assessment.docx" class="btn">Download Self-Assessment</a>
+    </section>
+
+    <section id="video" class="section">
+      <h2>Code Review Video</h2>
+      <p>Watch my project walkthrough and explanation of development decisions.</p>
+      <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Taylor Stapus | <a href="https://github.com/taylorstapus/taylorstapus.io">GitHub Repository</a></p>
+  </footer>
+</body>
+</html>
