--- a/index.html
+++ b/index.html
@@ -44,16 +44,17 @@
     <section id="narratives" class="section">
       <h2>Milestone Narratives</h2>
       <ul class="doc-links">
-        <li><a href="narratives/milestone1.docx">Milestone 1 Narrative</a></li>
-        <li><a href="narratives/milestone2.docx">Milestone 2 Narrative</a></li>
-        <li><a href="narratives/milestone3.docx">Milestone 3 Narrative</a></li>
+        <li><a href="narratives/CS 499 Module 3 Journal.docx">Milestone 1 </a></li>
+        <li><a href="narratives/CS 499 Module 4 Milestone 3 .docx">Milestone 2 </a></li>
+        <li><a href="narratives/CS 499 Module 5 Milestone 4.docx">Milestone 3 </a></li>
+        <li><a href="narratives/CS 499 Module 6 Journal.docx">Milestone 4 </a></li>
       </ul>
     </section>
 
     <section id="assessment" class="section">
       <h2>Professional Self-Assessment</h2>
       <p>A reflective overview of my learning and professional growth in software development.</p>
-      <a href="assessment/professional_self_assessment.docx" class="btn">Download Self-Assessment</a>
+      <a href="assessment/CS 499 Final Project-Professional Self-Assessment.docx" class="btn">Download Self-Assessment</a>
     </section>
 
     <section id="video" class="section">
