--- a/index.html
+++ b/index.html
@@ -26,20 +26,37 @@
 
   <main>
     <section id="projects" class="section">
-      <h2>Technical Artifacts</h2>
-      <div class="card-grid">
-        <div class="card">
-          <h3>Original Code</h3>
-          <p>Initial implementation files showcasing my early development approach.</p>
-          <a href="projects/original_code/" class="btn">View Code</a>
-        </div>
-        <div class="card">
-          <h3>Enhanced Code</h3>
-          <p>Refined project with improved functionality and structure.</p>
-          <a href="projects/enhanced_code/" class="btn">View Code</a>
-        </div>
-      </div>
-    </section>
+  <h2>Technical Artifacts</h2>
+  <p>Below are links to my live GitHub Pages projects showcasing my original and enhanced work.</p>
+
+  <div class="card-grid">
+
+    <div class="card">
+      <h3>Original Project</h3>
+      <p>View the original version of my project demonstrating foundational design and implementation.</p>
+      <a href="https://yourusername.github.io/original-project/" target="_blank" class="btn">
+        View Live Project
+      </a>
+      <br />
+      <a href="https://github.com/taylorstapus/Wild-Oasis-Website" target="_blank" class="secondary-link">
+        View Source Code on GitHub
+      </a>
+    </div>
+
+    <div class="card">
+      <h3>Enhanced Project</h3>
+      <p>Explore the enhanced version featuring improved functionality, UI, and performance optimizations.</p>
+      <a href="https://yourusername.github.io/enhanced-project/" target="_blank" class="btn">
+        View Live Project
+      </a>
+      <br />
+      <a href="https://github.com/taylorstapus/Wild-Oasis-Fullstacks" target="_blank" class="secondary-link">
+        View Source Code on GitHub
+      </a>
+    </div>
+
+  </div>
+</section>
 
     <section id="narratives" class="section">
       <h2>Milestone Narratives</h2>
