--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h2>Code Review Video</h2>
       <p>Watch my project walkthrough and explanation of development decisions.</p>
       <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://vimeo.com/1128732726?fl=ip&fe=ec" frameborder="0" allowfullscreen></iframe>
       </div>
     </section>
   </main>
