--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h2>Code Review Video</h2>
       <p>Watch my project walkthrough and explanation of development decisions.</p>
       <div class="video-container">
-        <iframe width="560" height="315" src="https://vimeo.com/1128732726?fl=ip&fe=ec" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/1128732726?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="1280" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" title="CS499-FinalProject-CodeReview"></iframe>
       </div>
     </section>
   </main>
