--- a/index.html
+++ b/index.html
@@ -67,12 +67,19 @@
     </section>
 
     <section id="video" class="section">
-      <h2>Code Review Video</h2>
-      <p>Watch my project walkthrough and explanation of development decisions.</p>
-      <div class="video-container">
-        <iframe src="https://player.vimeo.com/video/1128732726?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="1280" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" title="CS499-FinalProject-CodeReview"></iframe>
-      </div>
-    </section>
+  <h2>Code Review Video</h2>
+  <p>Watch my project walkthrough and explanation of development decisions.</p>
+
+  <div class="video-container">
+    <iframe 
+      src="https://player.vimeo.com/video/1128732726?badge=0&autopause=0&player_id=0&app_id=58479" 
+      title="CS499 Final Project Code Review"
+      frameborder="0"
+      allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+      allowfullscreen>
+    </iframe>
+  </div>
+</section>
   </main>
 
   <footer>
