--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <section id="narratives" class="section">
       <h2>Milestone Narratives</h2>
+      <p>Each narrative details my development process, design decisions, and reflection on how I applied computer science principles throughout the project milestones.</p>
       <ul class="doc-links">
         <li><a href="narratives/CS 499 Module 3 Journal.docx">Milestone 1 </a></li>
         <li><a href="narratives/CS 499 Module 4 Milestone 3 .docx">Milestone 2 </a></li>
