--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
 </section>
 
     <section id="narratives" class="section">
-      <h2>Milestone Narratives</h2>
-      <p>Each narrative details my development process, design decisions, and reflection on how I applied computer science principles throughout the project milestones.</p>
-      <ul class="doc-links">
-        <li><a href="narratives/CS 499 Module 3 Journal.docx">Milestone 1 </a></li>
-        <li><a href="narratives/CS 499 Module 4 Milestone 3 .docx">Milestone 2 </a></li>
-        <li><a href="narratives/CS 499 Module 5 Milestone 4.docx">Milestone 3 </a></li>
-        <li><a href="narratives/CS 499 Module 6 Journal.docx">Milestone 4 </a></li>
-      </ul>
-    </section>
+  <h2>Milestone Narratives</h2>
+  <p>Each narrative details my development process, design decisions, and reflection on how I applied computer science principles throughout the project milestones.</p>
+
+  <ul class="doc-links">
+    <li><a href="narratives/CS499_Module3_Journal.docx" download>Milestone 1 – Initial Development Journal</a></li>
+    <li><a href="narratives/CS499_Module4_Milestone3.docx" download>Milestone 2 – System Enhancement</a></li>
+    <li><a href="narratives/CS499_Module5_Milestone4.docx" download>Milestone 3 – Final Project Refinement</a></li>
+    <li><a href="narratives/CS499_Module6_Journal.docx" download>Milestone 4 – Reflection and Conclusion</a></li>
+  </ul>
+</section>
 
     <section id="assessment" class="section">
       <h2>Professional Self-Assessment</h2>
