--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
   </div>
 </section>
 
-    <section id="narratives" class="section">
+<section id="narratives" class="section">
   <h2>Milestone Narratives</h2>
   <p>Each narrative details my development process, design decisions, and reflection on how I applied computer science principles throughout the project milestones.</p>
 
   <ul class="doc-links">
-    <li><a href="narratives/CS499_Module3_Journal.docx" download>Milestone 1 – Initial Development Journal</a></li>
-    <li><a href="narratives/CS499_Module4_Milestone3.docx" download>Milestone 2 – System Enhancement</a></li>
-    <li><a href="narratives/CS499_Module5_Milestone4.docx" download>Milestone 3 – Final Project Refinement</a></li>
-    <li><a href="narratives/CS499_Module6_Journal.docx" download>Milestone 4 – Reflection and Conclusion</a></li>
+    <li><a href="narratives/CS499_Module3_Journal.docx" download>Milestone 1 – Set Up and MVC Framework</a></li>
+    <li><a href="narratives/CS499_Module4_Milestone3.docx" download>Milestone 2 – Handlebars and MongoDB</a></li>
+    <li><a href="narratives/CS499_Module5_Milestone4.docx" download>Milestone 3 – Restful API and SPA using Angular</a></li>
+    <li><a href="narratives/CS499_Module6_Journal.docx" download>Milestone 4 – Securty and Autheentication</a></li>
   </ul>
 </section>
 
@@ -68,7 +68,7 @@
       <a href="assessment/CS 499 Final Project-Professional Self-Assessment.docx" class="btn">Download Self-Assessment</a>
     </section>
 
-    <section id="video" class="section">
+<section id="video" class="section">
   <h2>Code Review Video</h2>
   <p>Watch my project walkthrough and explanation of development decisions.</p>
 
