--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="hero">
     <div class="overlay">
-      <h1>My Software Development ePortfolio</h1>
+      <h1>Taylor Stapus Software Development ePortfolio</h1>
       <p>Showcasing professional growth, technical artifacts, and reflection</p>
       <a href="#projects" class="btn">Explore Portfolio</a>
     </div>
